--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,6 +15,12 @@
     "mocha": true
   },
   "rules": {
-    "no-console": 1
+    "no-console": 1,
+    "import/named": 0,
+    "import/no-named-as-default": 0,
+    "import/no-named-as-default-member": 0,
+    "import/namespace": 0,
+    "import/default": 0,
+    "import/export": 0
   }
 }
