--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
   "description": "JavaScript development environment Pluralsight course by Cory House",
   "scripts": {
     "prestart": "babel-node buildScripts/startMessage.js",
-    "start": "npm-run-all --parallel open:src lint:watch test:watch",
+    "start": "npm-run-all --parallel open:src lint:watch test:watch start-mock-api",
     "open:src": "babel-node buildScripts/srcServer.js",
     "localtunnel": "lt --port 4000",
     "share": "npm-run-all --parallel start localtunnel",
     "lint": "esw webpack.config.* src buildScripts --color",
     "lint:watch": "npm run lint -- --watch",
     "test": "mocha --reporter progress buildScripts/testSetup.js \"src/**/*.test.js\"",
-    "test:watch": "npm run lint -- --watch"
+    "test:watch": "npm run test -- --watch",
+    "generate-mock-data": "babel-node buildScripts/generateMockData.js",
+    "pre:start-mock-api": "npm run generate-mock-data",
+    "start-mock-api": "json-server --watch src/api/db.json --port 4500",
+    "clean-dist": "rimraf ./dist && mkdir dist",
+    "prebuild": "npm-run-all clean-dist test lint",
+    "build": "babel-node buildScripts/build.js",
+    "postbuild": "babel-node buildScripts/distServer.js",
+    "deploy": "surge ./dist"
   },
   "author": "Cory House",
   "license": "MIT",
@@ -19,15 +27,15 @@
     "whatwg-fetch": "3.6.2"
   },
   "devDependencies": {
-    "@babel/cli": "7.13.0",
-    "@babel/core": "7.13.8",
-    "@babel/node": "^7.13.0",
-    "@babel/preset-env": "7.13.8",
-    "@babel/register": "7.13.8",
+    "@babel/cli": "^7.16.0",
+    "@babel/core": "^7.16.10",
+    "@babel/node": "^7.16.0",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/register": "^7.16.8",
     "babel-loader": "8.2.2",
     "chai": "4.3.0",
-    "chalk": "4.1.0",
-    "cheerio": "1.0.0-rc.5",
+    "chalk": "^4.1.2",
+    "cheerio": "^1.0.0-rc.10",
     "compression": "1.7.4",
     "cross-env": "7.0.3",
     "css-loader": "5.1.0",
@@ -40,9 +48,9 @@
     "jsdom": "^16.4.0",
     "json-schema-faker": "0.5.0-rcv.27",
     "json-server": "0.16.3",
-    "localtunnel": "2.0.1",
+    "localtunnel": "^2.0.2",
     "mini-css-extract-plugin": "^1.3.9",
-    "mocha": "8.3.0",
+    "mocha": "^9.2.0",
     "npm-run-all": "4.1.5",
     "numeral": "2.0.6",
     "open": "7.4.2",
